--- a/src/main/resources/gr/ntua/ece/stingy/app.properties
+++ b/src/main/resources/gr/ntua/ece/stingy/app.properties
@@ -1,4 +1,4 @@
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/?characterEncoding=utf-8&amp;autoReconnect=true
+db.url = jdbc:mysql://localhost:3306/stingy
 db.user = softeng
 db.pass = softeng
