--- a/src/main/resources/gr/ntua/ece/stingy/app.properties
+++ b/src/main/resources/gr/ntua/ece/stingy/app.properties
@@ -1,4 +1,4 @@
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/stingy
+db.url = jdbc:mysql://localhost:3306/stingy?characterEncoding=utf-8&amp;autoReconnect=true
 db.user = softeng
 db.pass = softeng
