--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     runtime "mysql:mysql-connector-java:5.1.16"                  //the MySQL JDBC driver
 
     gretty "mysql:mysql-connector-java:5.1.16"                   //make sure it is also available to the grety plugin
+	compile 'com.github.javadev:underscore:1.42'
 }
+
 
 gretty {
     //scanInterval = 0 //disable hot deployment
