--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -16,6 +16,7 @@
     "next": "^7.0.2",
     "node-fetch": "^2.3.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
   }
 }
